Fixed Invisible Collapsed Block Issue and Block Literal Not Mixing Well 2.0

--- a/src/languages/pyret/style-selection/style/scratch.less
+++ b/src/languages/pyret/style-selection/style/scratch.less
@@ -11,7 +11,7 @@
 
   // Set border parameters for default-style.less:
   @border-radius: 5px;
-  @border-width: 2px;
+  @border-width: 3px;
   // Color parameters:
   @comment-color: #ddd;
   @comment-background-color: #444;
@@ -66,8 +66,8 @@
     justify-content: center;
     font-weight: bold;
     padding: 1px 5px;
-    border: @border-width solid grey;
-    border-radius: 2px;
+    // border: @border-width solid grey;
+    // border-radius: 2px;
     text-align: center;
     color: white;
     > .blocks-white-space:not(.blocks-editing) {
@@ -151,7 +151,7 @@
     color: black;
     margin: 2px;
     border: @border-width solid grey;
-    border-radius: 2px;
+    border-radius: 5px;
     overflow: hidden;
     white-space: nowrap;
     transition: all 0.5s;
@@ -249,14 +249,14 @@
     }
   }
   
-  .blocks-literal, .blocks-literal-number{
-    color: white;
-  }
+  // .blocks-literal, .blocks-literal-number{
+  //   // color: white;
+  // }
 
-  .blocks-literal {
-    border: 2px solid black;
-    border-radius: 2px;
-  }
+  // .blocks-literal {
+  //   // border: 2px solid black;
+  //   // border-radius: 2px;
+  // }
 
   .blocks-let {
     background-color: rgb(255, 140, 26);
@@ -271,7 +271,7 @@
   }
   .blocks-func-body {
     display: inline-block;
-    background-color: #ffdbe9;
+    background-color: #EEE;
     .blocks-func-left {
       width: 100px;
       background-color: @func-background;
